# tinyZIP

./: CMakeLists.txt  README.md  bar.c  bar.h  comp.c  comp.h  compressor.c  compressor.h  huffman.c  huffman.h  lzw.c  lzw.h  main.c  marker.h
internal/: 3w_tire.c  3w_tire.h  bitstream.c  bitstream.h  pqueue.c  pqueue.h  str.c  str.h  vector.c  vector.h
internal/test/: 3w_tire_test.c  CMakeLists.txt  bitstream_test.c  pqueue_test.c  str_test.c  vector_test.c
test/: CMakeLists.txt  bar_test.c  lzw_test.c
